--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 services:
   - docker
 
@@ -8,5 +7,8 @@ before_install:
 script:
   - docker run jj/docker-react npm run test -- --coverage
 
-after-success:
+after_script:
   - exit 0
+
+after_success:
+  - echo "hurray!"
