--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 services:
   - docker
 
+language: generic
+
 before_install:
-  - docker build -t jj/docker-react -f Dockerfile.dev .
+  - docker build -t jj807/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run jj/docker-react npm run test -- --coverage
+  - docker run -e CI=true jj807/docker-react npm run test -- --coverage
 
 after_script:
   - exit 0
