--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 services:
   - docker
 
-language: generic
-
 before_install:
   - docker build -t jj807/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true jj807/docker-react npm run test -- --coverage
 
+language: minimal
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
@@ -16,7 +15,7 @@ deploy:
   env: "Dockerreact-env"
   bucket-name: "elasticbeanstalk-us-east-1-403548837988"
   bucket-path: "docker-react"
-  on: 
+  on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
